--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     <!--
       This HTML file is a template.
+      Firebase API key is '65,73,122,97,83,121,65,77,105,102,99,90,119,101,83,53,66,71,51,66,102,77,81,112,106,98,98,68,80,45,112,107,70,57,99,111,119,50,115'
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
